[package]
name = "winapi-comm"
version = "0.1.0"
edition = "2021"
description = "Common api libraries under windows"
license = "MIT"
repository = "https://github.com/editso/winapi-comm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2rs = "0.1.2"